--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                 <button class="all-buttons margarita-buttons" id="floradora" value="Floradora">Floradora</button>
                 <button class="all-buttons margarita-buttons" id="greenestTea" value="Greenest Tea">Greenest Tea</button>
                 <button class="all-buttons margarita-buttons" id="pineappleRidge" value="Pineapple Ridge">Pineapple Ridge</button>
-                <button class="all-buttons margarita-buttons" id="pricklyPearMargarita" value="Prickly Pear Margarita">Prickly Pear Margarita</button>
-                <button class="all-buttons margarita-buttons" id="seventhAveMartini" value="7th Ave Martini">7th Ave Martini</button>
-                <button class="all-buttons margarita-buttons" id="honeysuckleDerby" value="Honeysuckle Derby">Honeysuckle Derby</button>
-                <button class="all-buttons margarita-buttons" id="tropicalColada" value="Tropical Colada">Tropical Colada</button>
-                <button class="all-buttons margarita-buttons" id="goldenMule" value="Golden Mule">Golden Mule</button>
-                <button class="all-buttons margarita-buttons" id="mangoGimlet" value="Mango Gimlet">Mango Gimlet</button>
-                <button class="all-buttons margarita-buttons" id="cambierSpritz" value="Cambier Spritz">Cambier Spritz</button>
+                <button class="all-buttons margarita-buttons" id="pricklyPearMargaritaLPD" value="Prickly Pear Margarita">Prickly Pear Margarita</button>
+                <button class="all-buttons margarita-buttons disabled" id="seventhAveMartini" value="7th Ave Martini" disabled>7th Ave Martini</button>
+                <button class="all-buttons margarita-buttons disabled" id="honeysuckleDerby" value="Honeysuckle Derby" disabled>Honeysuckle Derby</button>
+                <button class="all-buttons margarita-buttons disabled" id="tropicalColada" value="Tropical Colada" disabled>Tropical Colada</button>
+                <button class="all-buttons margarita-buttons disabled" id="goldenMule" value="Golden Mule" disabled>Golden Mule</button>
+                <button class="all-buttons margarita-buttons disabled" id="mangoGimlet" value="Mango Gimlet" disabled>Mango Gimlet</button>
+                <button class="all-buttons margarita-buttons disabled" id="cambierSpritz" value="Cambier Spritz" disabled>Cambier Spritz</button>
             </div>
 
             
@@ -89,12 +89,12 @@
 
             <div id="specialtyBtnDiv">
                 <!-- Specialty Buttons -->
-                <button class="all-buttons specialty-buttons" id="greenTeaSpritz" value="Green Tea Spritz">Green Tea Spritz</button>
-                <button class="all-buttons specialty-buttons" id="magicPalmer" value="Magic Palmer">Magic Palmer</button>
-                <button class="all-buttons specialty-buttons" id="strawberryKiwiSpritz" value="Strawberry Kiwi Spritz">Strawberry Kiwi Spritz</button>
-                <button class="all-buttons specialty-buttons" id="lakeParkLemonade" value="Lake Park Lemonade">Lake Park Lemonade</button>
-                <button class="all-buttons specialty-buttons" id="hempHibiscus" value="Hemp Hibiscus">Hemp Hibiscus</button>
-                <button class="all-buttons specialty-buttons" id="specialtyLemonade" value="Specialty Lemonade">Specialty Lemonade</button>
+                <button class="all-buttons specialty-buttons disabled" id="greenTeaSpritz" value="Green Tea Spritz" disabled>Green Tea Spritz</button>
+                <button class="all-buttons specialty-buttons disabled" id="magicPalmer" value="Magic Palmer" disabled>Magic Palmer</button>
+                <button class="all-buttons specialty-buttons disabled" id="strawberryKiwiSpritz" value="Strawberry Kiwi Spritz" disabled>Strawberry Kiwi Spritz</button>
+                <button class="all-buttons specialty-buttons disabled" id="lakeParkLemonade" value="Lake Park Lemonade" disabled>Lake Park Lemonade</button>
+                <button class="all-buttons specialty-buttons disabled" id="hempHibiscus" value="Hemp Hibiscus" disabled>Hemp Hibiscus</button>
+                <button class="all-buttons specialty-buttons disabled" id="specialtyLemonade" value="Specialty Lemonade" disabled>Specialty Lemonade</button>
             </div>
 
                 <!-- Other Buttons -->
