--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                 <button class="all-buttons margarita-buttons" id="greenestTea" value="Greenest Tea">Greenest Tea</button>
                 <button class="all-buttons margarita-buttons" id="pineappleRidge" value="Pineapple Ridge">Pineapple Ridge</button>
                 <button class="all-buttons margarita-buttons" id="pricklyPearMargaritaLPD" value="Prickly Pear Margarita">Prickly Pear Margarita</button>
-                <button class="all-buttons margarita-buttons disabled" id="seventhAveMartini" value="7th Ave Martini" disabled>7th Ave Martini</button>
-                <button class="all-buttons margarita-buttons disabled" id="honeysuckleDerby" value="Honeysuckle Derby" disabled>Honeysuckle Derby</button>
-                <button class="all-buttons margarita-buttons disabled" id="tropicalColada" value="Tropical Colada" disabled>Tropical Colada</button>
-                <button class="all-buttons margarita-buttons disabled" id="goldenMule" value="Golden Mule" disabled>Golden Mule</button>
-                <button class="all-buttons margarita-buttons disabled" id="mangoGimlet" value="Mango Gimlet" disabled>Mango Gimlet</button>
-                <button class="all-buttons margarita-buttons disabled" id="cambierSpritz" value="Cambier Spritz" disabled>Cambier Spritz</button>
+                <button class="all-buttons margarita-buttons" id="seventhAveMartini" value="7th Ave Martini">7th Ave Martini</button>
+                <button class="all-buttons margarita-buttons" id="honeysuckleDerby" value="Honeysuckle Derby">Honeysuckle Derby</button>
+                <button class="all-buttons margarita-buttons" id="tropicalColada" value="Tropical Colada">Tropical Colada</button>
+                <button class="all-buttons margarita-buttons" id="goldenMule" value="Golden Mule">Golden Mule</button>
+                <button class="all-buttons margarita-buttons" id="mangoGimlet" value="Mango Gimlet">Mango Gimlet</button>
+                <button class="all-buttons margarita-buttons" id="cambierSpritz" value="Cambier Spritz">Cambier Spritz</button>
             </div>
 
             
